# serializer version: 1
# name: test_fmt_pct_extra_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right"><span style='color:grey;'><1%</span></td>
      <td class="gt_row gt_left">apricot</td>
      <td class="gt_row gt_left">one</td>
      <td class="gt_row gt_right">2015-01-15</td>
      <td class="gt_row gt_right">13:35</td>
      <td class="gt_row gt_right">2018-01-01 02:22</td>
      <td class="gt_row gt_right">49.95</td>
      <td class="gt_row gt_left">row_1</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2%</td>
      <td class="gt_row gt_left">banana</td>
      <td class="gt_row gt_left">two</td>
      <td class="gt_row gt_right">2015-02-15</td>
      <td class="gt_row gt_right">14:40</td>
      <td class="gt_row gt_right">2018-02-02 14:33</td>
      <td class="gt_row gt_right">17.95</td>
      <td class="gt_row gt_left">row_2</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33%</td>
      <td class="gt_row gt_left">coconut</td>
      <td class="gt_row gt_left">three</td>
      <td class="gt_row gt_right">2015-03-15</td>
      <td class="gt_row gt_right">15:45</td>
      <td class="gt_row gt_right">2018-03-03 03:44</td>
      <td class="gt_row gt_right">1.39</td>
      <td class="gt_row gt_left">row_3</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_duplicate_column_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td class="gt_row gt_left">one</td>
      <td class="gt_row gt_right">2015-01-15</td>
      <td class="gt_row gt_right">13:35</td>
      <td class="gt_row gt_right">2018-01-01 02:22</td>
      <td class="gt_row gt_right">49.95</td>
      <td class="gt_row gt_left">row_1</td>
      <td class="gt_row gt_left">grp_a</td>
      <td class="gt_row gt_right">0.1111</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td class="gt_row gt_left">two</td>
      <td class="gt_row gt_right">2015-02-15</td>
      <td class="gt_row gt_right">14:40</td>
      <td class="gt_row gt_right">2018-02-02 14:33</td>
      <td class="gt_row gt_right">17.95</td>
      <td class="gt_row gt_left">row_2</td>
      <td class="gt_row gt_left">grp_a</td>
      <td class="gt_row gt_right">2.222</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td class="gt_row gt_left">three</td>
      <td class="gt_row gt_right">2015-03-15</td>
      <td class="gt_row gt_right">15:45</td>
      <td class="gt_row gt_right">2018-03-03 03:44</td>
      <td class="gt_row gt_right">1.39</td>
      <td class="gt_row gt_left">row_3</td>
      <td class="gt_row gt_left">grp_a</td>
      <td class="gt_row gt_right">33.33</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_two_column_layout_snapshot
  '''
  
      <div style="display: flex; justify-content: center; width: 100%;">
          <div id="mycombinedtable" style="display: inline-block; width: auto;">
              
          <style>
          
  #mycombinedtable div {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #mycombinedtable thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #mycombinedtable p { margin: 0; padding: 0; }
   #mycombinedtable .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #mycombinedtable .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #mycombinedtable .gt_title { color: #333333; font-size: 125%; font-weight: initial; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #mycombinedtable .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 3px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #mycombinedtable .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #mycombinedtable .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #mycombinedtable .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #mycombinedtable .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: bottom; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #mycombinedtable .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #mycombinedtable .gt_column_spanner_outer:first-child { padding-left: 0; }
   #mycombinedtable .gt_column_spanner_outer:last-child { padding-right: 0; }
   #mycombinedtable .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; vertical-align: bottom; padding-top: 5px; padding-bottom: 5px; overflow-x: hidden; display: inline-block; width: 100%; }
   #mycombinedtable .gt_spanner_row { border-bottom-style: hidden; }
   #mycombinedtable .gt_group_heading { padding-top: 8px; padding-bottom: 8px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: middle; text-align: left; }
   #mycombinedtable .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; vertical-align: middle; }
   #mycombinedtable .gt_from_md> :first-child { margin-top: 0; }
   #mycombinedtable .gt_from_md> :last-child { margin-bottom: 0; }
   #mycombinedtable .gt_row { padding-top: 8px; padding-bottom: 8px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: solid; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: middle; overflow-x: hidden; }
   #mycombinedtable .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #mycombinedtable .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #mycombinedtable .gt_row_group_first td { border-top-width: 2px; }
   #mycombinedtable .gt_row_group_first th { border-top-width: 2px; }
   #mycombinedtable .gt_striped { background-color: rgba(128,128,128,0.05); }
   #mycombinedtable .gt_table_body { border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #mycombinedtable .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #mycombinedtable .gt_sourcenote { font-size: 90%; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #mycombinedtable .gt_left { text-align: left; }
   #mycombinedtable .gt_center { text-align: center; }
   #mycombinedtable .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #mycombinedtable .gt_font_normal { font-weight: normal; }
   #mycombinedtable .gt_font_bold { font-weight: bold; }
   #mycombinedtable .gt_font_italic { font-style: italic; }
   #mycombinedtable .gt_super { font-size: 65%; }
   #mycombinedtable .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #mycombinedtable .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  
          </style>
          
              <div class="gt_table gt_heading gt_title gt_font_normal"
                  style="width:100%; "
              >
                  Header 1
              </div>
              
              <div class="gt_table gt_heading gt_subtitle gt_font_normal"
                  style="width:100%; ">
                  Subtitle 1
              </div>
              
              <div style="overflow: auto; white-space: nowrap;">
                  <div style="display: inline-block; margin-right: 1em;">
                      <div id="id1" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #id1 table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #id1 thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #id1 p { margin: 0; padding: 0; }
   #id1 .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #id1 .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #id1 .gt_title { color: #333333; font-size: 125%; font-weight: initial; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #id1 .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 3px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #id1 .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #id1 .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #id1 .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #id1 .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: bottom; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #id1 .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #id1 .gt_column_spanner_outer:first-child { padding-left: 0; }
   #id1 .gt_column_spanner_outer:last-child { padding-right: 0; }
   #id1 .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; vertical-align: bottom; padding-top: 5px; padding-bottom: 5px; overflow-x: hidden; display: inline-block; width: 100%; }
   #id1 .gt_spanner_row { border-bottom-style: hidden; }
   #id1 .gt_group_heading { padding-top: 8px; padding-bottom: 8px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: middle; text-align: left; }
   #id1 .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; vertical-align: middle; }
   #id1 .gt_from_md> :first-child { margin-top: 0; }
   #id1 .gt_from_md> :last-child { margin-bottom: 0; }
   #id1 .gt_row { padding-top: 8px; padding-bottom: 8px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: solid; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: middle; overflow-x: hidden; }
   #id1 .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #id1 .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #id1 .gt_row_group_first td { border-top-width: 2px; }
   #id1 .gt_row_group_first th { border-top-width: 2px; }
   #id1 .gt_striped { background-color: rgba(128,128,128,0.05); }
   #id1 .gt_table_body { border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #id1 .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #id1 .gt_sourcenote { font-size: 90%; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #id1 .gt_left { text-align: left; }
   #id1 .gt_center { text-align: center; }
   #id1 .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #id1 .gt_font_normal { font-weight: normal; }
   #id1 .gt_font_bold { font-weight: bold; }
   #id1 .gt_font_italic { font-style: italic; }
   #id1 .gt_super { font-size: 65%; }
   #id1 .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #id1 .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="id1-A">A</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="id1-B">B</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">1</td>
      <td class="gt_row gt_right">3</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2</td>
      <td class="gt_row gt_right">4</td>
    </tr>
  </tbody>
  
  
  </table>
  
  </div>
          
                  </div>
                  <div style="display: inline-block;">
                      <div id="id2" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #id2 table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #id2 thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #id2 p { margin: 0; padding: 0; }
   #id2 .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #id2 .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #id2 .gt_title { color: #333333; font-size: 125%; font-weight: initial; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #id2 .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 3px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #id2 .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #id2 .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #id2 .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #id2 .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: bottom; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #id2 .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #id2 .gt_column_spanner_outer:first-child { padding-left: 0; }
   #id2 .gt_column_spanner_outer:last-child { padding-right: 0; }
   #id2 .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; vertical-align: bottom; padding-top: 5px; padding-bottom: 5px; overflow-x: hidden; display: inline-block; width: 100%; }
   #id2 .gt_spanner_row { border-bottom-style: hidden; }
   #id2 .gt_group_heading { padding-top: 8px; padding-bottom: 8px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: middle; text-align: left; }
   #id2 .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; vertical-align: middle; }
   #id2 .gt_from_md> :first-child { margin-top: 0; }
   #id2 .gt_from_md> :last-child { margin-bottom: 0; }
   #id2 .gt_row { padding-top: 8px; padding-bottom: 8px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: solid; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; vertical-align: middle; overflow-x: hidden; }
   #id2 .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #id2 .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #id2 .gt_row_group_first td { border-top-width: 2px; }
   #id2 .gt_row_group_first th { border-top-width: 2px; }
   #id2 .gt_striped { background-color: rgba(128,128,128,0.05); }
   #id2 .gt_table_body { border-top-style: solid; border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #id2 .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #id2 .gt_sourcenote { font-size: 90%; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #id2 .gt_left { text-align: left; }
   #id2 .gt_center { text-align: center; }
   #id2 .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #id2 .gt_font_normal { font-weight: normal; }
   #id2 .gt_font_bold { font-weight: bold; }
   #id2 .gt_font_italic { font-style: italic; }
   #id2 .gt_super { font-size: 65%; }
   #id2 .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #id2 .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="id2-A">A</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="id2-B">B</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">5</td>
      <td class="gt_row gt_right">7</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">6</td>
      <td class="gt_row gt_right">8</td>
    </tr>
  </tbody>
  
  
  </table>
  
  </div>
          
                  </div>
              </div>
          </div>
      </div>
      
  '''
# ---
